INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO

noinst_LTLIBRARIES = libksvnwidgets.la

noinst_HEADERS = authdialogimpl.h logmsg_impl.h \
	ssltrustprompt_impl.h

libksvnwidgets_la_SOURCES = authdlg.ui authdialogimpl.cpp ssltrustprompt.ui ssltrustprompt_impl.cpp \
	logmessage.ui logmsg_impl.cpp
