INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES = liblistview.a
noinst_HEADERS = kdesvnfilelist.h filelistviewitem.h svnlogdlgimp.h \
		svnactions.h rangeinput_impl.h ccontextlistener.h
liblistview_a_SOURCES = kdesvnfilelist.cpp filelistviewitem.cpp \
		svnlogdlgimp.cpp svnlogdlg.ui svnactions.cpp rangeinput.ui rangeinput_impl.cpp \
	ccontextlistener.cpp
