pics_DATA = added_file.png add.png add_wc_bookmark.png bookmark.png browse.png commit.png computer.png \
	conflicted_file.png deleted_file.png delete.png earth.png folder.png folderup.png info.png \
	log.png merged_file.png missing_file.png modified_file.png modified_newer_file.png \
	modified_open_folder.png modified_versioned_folder.png newer_file.png newer_folder.png \
	newer_open_folder.png nonsvn_file.png nonsvn_open_folder.png normal_file.png open_folder.png \
	refresh_gray.png refresh.png remove_bookmark.png replaced_file.png resolve.png revert.png \
	sort_down.png  sort_up.png stop.png template.png update.png versioned_folder.png merge.png

picsdir = $(kde_datadir)/kdesvn/pics

EXTRA_DIST = $(pics_DATA)
