INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libsvnwrapper.a
libsvnwrapper_a_SOURCES = apr.cpp client_annotate.cpp client_cat.cpp client.cpp \
				client_diff.cpp client_ls.cpp client_modify.cpp client_property.cpp client_status.cpp \
				context.cpp datetime.cpp dirent.cpp entry.cpp exception.cpp log_entry.cpp path.cpp \
				pool.cpp property.cpp revision.cpp status.cpp targets.cpp url.cpp wc.cpp \
			version_check.cpp lock_entry.cpp client_lock.cpp info_entry.cpp
noinst_HEADERS = annotate_line.hpp apr.hpp check.hpp client.hpp \
		context.hpp	datetime.hpp dirent.hpp entry.hpp log_entry.hpp path.hpp pool.hpp	property.hpp \
		revision.hpp status.hpp targets.hpp url.hpp wc.hpp version_check.hpp lock_entry.hpp \
	info_entry.hpp
