INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libsvnfrontend.a
noinst_HEADERS = kdesvnfilelist.h filelistviewitem.h svnlogdlgimp.h \
										svnactions.h rangeinput_impl.h ccontextlistener.h authdialogimpl.h propertiesdlg.h \
						editproperty_impl.h logmsg_impl.h checkoutinfo_impl.h stopdlg.h importdir_logmsg.h \
		mergedlg_impl.h copymoveview_impl.h
libsvnfrontend_a_SOURCES = kdesvnfilelist.cpp filelistviewitem.cpp \
										svnlogdlgimp.cpp svnlogdlg.ui svnactions.cpp rangeinput.ui rangeinput_impl.cpp \
									ccontextlistener.cpp authdlg.ui authdialogimpl.cpp propertiesdlg.cpp editpropsdlg.ui \
						editproperty_impl.cpp logmessage.ui logmsg_impl.cpp checkoutinfo.ui checkoutinfo_impl.cpp \
				stopdlg.cpp importdir_logmsg.cpp merge_dlg.ui mergedlg_impl.cpp copymoveview.ui \
	copymoveview_impl.cpp
